Design: 인증 페이지, 투두리스트 페이지 마크업
styled-components 설치
pretendard 폰트 적용
Globalstyles 적용
레이아웃 재사용을 위해 router children 이용
특정 페이지에서만 사용하는 ui인 경우 각각의 컴포넌트 하위 폴더로 분리

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="원티드 프리온보딩 과제" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="stylesheet"
+      as="style"
+      crossorigin
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css"
+    />
     <title>TodoList</title>
   </head>
   <body>
